# prototext-tensorflow

./: CMakeLists.txt  README.md  gen_proto_text_functions.cc  gen_proto_text_functions_lib.cc  gen_proto_text_functions_lib.h  integral_types.h  protobuf.h  protobuf.hpp  types.h
